# echr

./: .gitignore  DATA_DECISIONS.md  ECHR.ipynb  EDA.ipynb  EDA_705.ipynb  EDA_unified.ipynb  EXPERIMENT_CONCLUSIONS.md  HUDOC_DATA_EXPANSION.md  MODEL_DIAGNOSTICS.md  Model_Comparison.ipynb  README.md  echr-model-compare_result1.ipynb  echr-model-compare_result2.ipynb  pyproject.toml  requirements.txt  scattertext_viz_light.html
data/incremental/raw/: increment_summary.json  metadata_increment.csv
data/processed/: metadata_joined_test.csv  split_summary.json  test.csv  val.csv
data/raw/: metadata.csv
labs/: Lab_2_AI.md  Lab_3_Text.md  Lab_4_nlp.md  Lab_5_xml.md
scripts/: analyze_bias.py  download_data.py  download_increments_data.py  generate_eda.py  preprocess_data.py  split_data.py
src/: dataset.py  train.py  train_classical.py
