[project]
name = "echr"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "bokeh>=3.4.3",
    "bs4>=0.0.2",
    "gensim>=4.4.0",
    "ipympl>=0.10.0",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "nltk>=3.9.2",
    "numpy==1.23.5",
    "pandas>=2.1.0",
    "pytextrank>=3.3.0",
    "scattertext>=0.1.19",
    "scikit-learn==1.1.3",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
]
